# prologue-fx

./: .gitignore  .gitmodules  README.md  build.sh  fx_config.json  toolchain-arm-none-eabi.cmake
fx/Clipper/: CMakeLists.txt  manifest.json
fx/Clipper/src/: ClipperFX.cpp  ClipperFX.hpp  ClippingFX.cpp  ClippingFX.hpp  modes.hpp  module_config.hpp  shapers.hpp
fx/MoogFilter/: CMakeLists.txt  manifest.json
fx/MoogFilter/src/: MoogFilterFX.cpp  MoogFilterFX.hpp  module_config.hpp
fx/MoogFilterSimple/: manifest.json
fx/MoogFilterSimple/src/: MoogFilterSimpleFX.cpp  MoogFilterSimpleFX.hpp
fx/Panner/: CMakeLists.txt  manifest.json
fx/Panner/src/: PanFX.cpp  PanFX.hpp  PannerFX.cpp  PannerFX.hpp
platform/prologue/: main.cpp  math_util.hpp
platform/prologue/clip-modfx/: manifest.json  project.mk
platform/prologue/clip-modfx/src/: clip.cpp  clip.hpp  funcs.hpp  modes.hpp  modfx_main.cpp  modfx_main.hpp  shapers.hpp
platform/prologue/pan-modfx/: manifest.json  project.mk  unit.mk
platform/prologue/pan-modfx/src/: PanFX.hpp  module_config.hpp  pan.cpp  pan.h  pan.hpp
scripts/: logging.sh
shared/: FXBase.hpp  FXWrapper.hpp  main_delfx.cpp  main_modfx.cpp  main_revfx.cpp
shared/inc/: userprg.h
shared/ld/: userdelfx.ld  usermodfx.ld  userrevfx.ld
shared/templates/: main_delfx.cpp.in  main_modfx.cpp.in  main_revfx.cpp.in
shared/tpl/: _unit.c
shared/wrappers/: FXWrapper.hpp  ModFXWrapper.hpp  RevDelFXWrapper.hpp
tools/: update_manifest.sh
